crates/core/src/health/snapshots/mix_core__health__tests__a_rewritten_nix_conf_restarts_a_running_daemon.snap
---
source: crates/core/src/health/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "/etc/nix/nix.conf",
        "subject": "/etc/nix/nix.conf",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_DELETE",
        "operation": "OPERATION_REMOVE_CREATED_TREE",
        "status": "STATUS_SUCCEEDED",
        "step": "leftovers of interrupted writes",
        "subject": "/etc/nix/.nix.conf.mix-backup-78",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_RESTART_UNIT",
        "status": "STATUS_SUCCEEDED",
        "step": "restart-nix-daemon",
        "subject": "nix-daemon.service",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "repair",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_SUCCEEDED",
    "steps": [
      {
        "key": "/etc/mix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/etc/mix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/etc/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/etc/nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/etc/profile.d",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/etc/profile.d",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/var/lib/mix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/var/lib/mix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/var/lib/mix/bin",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/var/lib/mix/bin",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/store",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/store",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/log",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/log",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/log/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/log/nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/log/nix/drvs",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/log/nix/drvs",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/db",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/db",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/gcroots",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/gcroots",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/gcroots/per-user",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/gcroots/per-user",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/profiles",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/profiles",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/profiles/per-user",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/profiles/per-user",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/temproots",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/temproots",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/userpool",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/userpool",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/var/nix/daemon-socket",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/var/nix/daemon-socket",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/nix/.mix-managed",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/nix/.mix-managed",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/etc/mix/policy.json",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/etc/mix/policy.json",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/etc/nix/nix.conf",
        "status": "STATUS_SUCCEEDED",
        "subject": "/etc/nix/nix.conf",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/etc/profile.d/mix-nix.sh",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/etc/profile.d/mix-nix.sh",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "mix-users",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-users",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld1",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld1",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld2",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld2",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld3",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld3",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld4",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld4",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld5",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld5",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld6",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld6",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld7",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld7",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld8",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld8",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld9",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld9",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld10",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld10",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld11",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld11",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld12",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld12",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld13",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld13",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld14",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld14",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld15",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld15",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld16",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld16",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld17",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld17",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld18",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld18",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld19",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld19",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld20",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld20",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld21",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld21",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld22",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld22",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld23",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld23",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld24",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld24",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld25",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld25",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld26",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld26",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld27",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld27",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld28",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld28",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld29",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld29",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld30",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld30",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld31",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld31",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nixbld32",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nixbld32",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nix-daemon.service",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nix-daemon.service",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "nix-daemon.socket",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "nix-daemon.socket",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "mix-daemon.service",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-daemon.service",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "mix-daemon.socket",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-daemon.socket",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "default profile",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "default profile",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/var/lib/mix/bin/mix-daemon",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/var/lib/mix/bin/mix-daemon",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/var/lib/mix/journal",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/var/lib/mix/journal",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/nix/profiles",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/nix/profiles",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix/home.nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix/home.nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix/flake.nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix/flake.nix",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix/flake.lock",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix/flake.lock",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix/.gitignore",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix/.gitignore",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix/state",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix/state",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/mix/.git",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/mix/.git",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "alice",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "alice",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice/.local/state/nix/profiles/home-manager",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice/.local/state/nix/profiles/home-manager",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "/home/alice",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/alice",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "leftovers of interrupted writes",
        "status": "STATUS_SUCCEEDED",
        "subject": "leftovers of interrupted writes",
        "undone": false,
        "verb": "VERB_REPAIRING"
      },
      {
        "key": "restart-nix-daemon",
        "status": "STATUS_SUCCEEDED",
        "subject": "Nix daemon",
        "undone": false,
        "verb": "VERB_RESTARTING"
      },
      {
        "key": "record-repaired-config",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "repaired configuration",
        "undone": false,
        "verb": "VERB_RECORDING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/etc/nix/nix.conf": {
        "contents": [
          "-trusted-users = *",
          "+build-users-group = nixbld",
          "+experimental-features = nix-command flakes",
          "+trusted-users = root",
          "+substituters = https://mirror.internal/cache",
          "+trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= mirror:AAAA"
        ]
      }
    }
  },
  "performed": [
    "PutFile /etc/nix/nix.conf",
    "RemoveCreatedTree /etc/nix/.nix.conf.mix-backup-78",
    "RestartUnit nix-daemon.service",
    "Commit changes"
  ]
}
